--- a/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
+++ b/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
@@ -1,8 +1,12 @@
-<h2 mat-dialog-title class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Create User Role</h2>
+<div class="flex">
+  <h2 mat-dialog-title class="mb-0 w-11/12 heading mt-0">Create User Role</h2>
+  <mat-icon mat-dialog-close class="text-end w-1/12 text-danger self-center justify-content-end">cancel</mat-icon>
+</div>
+
 <mat-dialog-content class="mat-typography">
 
     <form  [formGroup]="roleForm" (ngSubmit)="onSubmit()" novalidate>
-        <div class="flex gt-xs:flex-row mt-4">
+        <div class="flex gt-xs:flex-row mt-2">
             <mat-form-field   class="flex-auto gt-xs:pr-3 mr-5">
                 <mat-label>Profile Name</mat-label>
                 <input matInput id="ProfileName"  placeholder="Role Code" formControlName="ProfileName" >
@@ -33,18 +37,18 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions class="py-3 border-t" align="end">
-    <button class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-button mat-dialog-close><mat-icon class="mr-2">cancel</mat-icon> Cancel</button>
+    
    
      <button
-     style="background-color: #01671B;"
-     class=""
+     *ngIf="!roleForm.disabled"
+     class=" bg-green"
      mat-flat-button
      [color]="'primary'"
      [disabled]="viewLoading"
      (click)="onSubmit()">
-     <span class="flex" *ngIf="!roleForm.disabled">
-      <mat-icon class="mr-2">save</mat-icon> <p class="self-center">Save</p>
-     </span>
+
+      <mat-icon class="mr-2">save</mat-icon>Save
+
      <mat-progress-spinner
          *ngIf="roleForm.disabled"
          [diameter]="24"
