--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -6,22 +6,19 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
-                <button  class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="addNewConfiguration()">
-                    <mat-icon class=" mr-2 text-white" >edit</mat-icon>
+                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                        (click)="addNewConfiguration()">
+                    <mat-icon class=" mr-2 text-white">edit</mat-icon>
                     Configuration
                 </button>
-              </p>
+            </p>
         </div>
     </div>
 
 
-
-
-
-
     <!-- Main -->
-    <div class=" overflow-x-hidden " 
-    style=" 
+    <div class=" overflow-x-hidden "
+         style="
             min-width: max-content;
             max-height: 70vh;
             overflow-y:scroll;
@@ -33,8 +30,9 @@
         <div class="form-group row  px-3 shadow-none">
             <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile  border shadow-xs rounded-sm bg-gray-50"
                  id="custom-table-activity-list">
-                <div class="custom-accordion rounded-lg my-2 bg-white shadow-sm border" *ngFor="let parent_configuration of configurations;let i=index">
-                    <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
+                <div class="custom-accordion rounded-lg my-2 bg-white shadow-sm border"
+                     *ngFor="let parent_configuration of configurations;let i=index">
+                    <div class="custom-accordion-head border-0" (click)="toggleAccordion(parent_configuration.KeyID)"
                          style="cursor: pointer">
                         <div class="ml-8" style="align-self: center;">
                             <span class="font-bold text-md text-green">
@@ -43,7 +41,7 @@
                         </div>
                         <div class="mr-8" style="display: flex;
     margin-right: 10%;">
-                            <button mat-icon-button >
+                            <button mat-icon-button>
                                 <mat-icon class="text-red-500">delete_forever</mat-icon>
                             </button>
                             <button mat-icon-button color="primary" style="margin-left: 10%;"
@@ -58,8 +56,10 @@
                             </button>
                         </div>
                     </div>
-                    <div class="custom-accordion-body bg-white border-t bg-gray-50 rounded" id="{{'table_'+i}}" style="display: none">
-                        <table class="table table-responsive bg-gray-50" style="display: inline-table !important;">
+                    <div class="custom-accordion-body bg-white border-t bg-gray-50 rounded" id="{{'table_'+i}}"
+                         style="display: none">
+                        <table class="table table-responsive bg-gray-50" style="display: inline-table !important;"
+                               id="{{'table_'+parent_configuration.KeyID}}">
                             <thead class="thead-light">
                             <tr>
                                 <th>Sr.</th>
