--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -83,7 +83,7 @@
                     <div style="width: 225px;">
                         <div class="flex flex-shrink-0 items-center  mb-2">
                             <button
-                                aria-controls="collapseExample" (click)="searchloanutilization()"
+                                aria-controls="collapseExample" (click)="searchloanutilization(true)"
                                 class="mt-2 bg-gray-500" mat-flat-button [color]="'primary'">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
@@ -252,6 +252,7 @@
             <mat-option [value]="10">10</mat-option>
             <mat-option [value]="25">25</mat-option>
             <mat-option [value]="50">50</mat-option>
+            <mat-option [value]="100">100</mat-option>
         </mat-select>
         <button (click)="paginate(1)">First</button>
         <pagination-controls display="inline" (pageChange)="paginate($event)"
