--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -304,8 +304,8 @@
                             (click)="changeStatus('A')">
                         Authorize
                     </button>
-                    <button *ngIf="isDelete" class="ml-2" mat-raised-button color="primary" (click)="changeStatus('C')">
-                        Delete
+                    <button *ngIf="isDelete" class="ml-2 bg-danger" mat-raised-button color="primary" (click)="changeStatus('C')">
+                        <mat-icon class="mr-2">delete_forever</mat-icon> Delete
                     </button>
                 </div>
             </div>
