--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -1,6 +1,9 @@
 <div class="sm:flex grid" [formGroup]="form" (submit)="checkZoneValidation()">
     <div class="mx-2">
-        <button mat-flat-button (click)="clearForm()" color="warn">Clear Form</button>
+
+
+        <a href="#" (click)="clearForm()">Clear Filters</a>
+
     </div>
     <div class="mx-2">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
