--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -2,7 +2,7 @@
     <div class="mx-2">
 
 
-        <a href="#" (click)="clearForm()">Clear Filters</a>
+        <a (click)="clearForm()">Clear Filters</a>
 
     </div>
     <div class="mx-2">
