--- a/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
+++ b/src/app/modules/loan/cl-gl-scheme-crop-configuration/cl-gl-scheme-crop-configuration.component.html
@@ -165,8 +165,8 @@
                 <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background"></mat-header-row>
 
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-                <div class="mat-table__message" *ngIf="!loading ">No records found</div>
-                <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+<!--                <div class="mat-table__message" *ngIf="!loading ">No records found</div>-->
+<!--                <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
               </mat-table>
 
 
