land attach fixed

--- a/src/app/modules/loan/cl-securities/cl-securities.component.html
+++ b/src/app/modules/loan/cl-securities/cl-securities.component.html
@@ -138,7 +138,7 @@
                 <td>{{custLand.AttachedFlag}}</td>
                 <td>
 
-                  <mat-checkbox  (click)="onChang(custLand,i)" [disabled]="IfDisabledBOX(custLand.IsAttached)" [checked]="checkBOX(custLand?.ID)">
+                  <mat-checkbox  (click)="onChang(custLand,i)" [disabled]="IfDisabledBOX(custLand.IsAttached)" [checked]="checkBOX(custLand.IsAttached)">
                   </mat-checkbox>
                 </td>
               </tr>
