--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -110,7 +110,7 @@
        </div>
         <div class="form-group kt-form__group row">
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mt-2">
-          <mat-checkbox class="example-margin" (click)="onChang(isCheckedEquity)" [checked]="isCheckedEquity" >Check Equity</mat-checkbox>
+          <mat-checkbox class="example-margin" [checked]="true" >Check Equity</mat-checkbox>
         </div>
         <div class="col-lg-8 col-sm-12 kt-margin-bottom-20-mobile">
           <mat-label class="customMatLabel mb-4"><b>Borrower Agreed to Pay Insurance For (Opt) Crops</b><strong class="matMandatory">*</strong></mat-label>
