--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -62,8 +62,7 @@
             </mat-form-field>
         </div>
     </div>
-    <div class="mx-2 flex flex-shrink-0 items-center mt-6 sm:mt-0 place-content-end" style="width: 225px;">
-        <a class="cursor-pointer text-danger text-center btn btn-danger text-white " (click)="clearForm()">Clear Filters</a>
-    </div>
+        <a class="cursor-pointer text-md font-bold text-danger text-center text-danger position-absolute top-1 right-8 " (click)="clearForm()">Clear Filters</a>
+
 </div>
 
