lc inquiry fixed

--- a/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
@@ -287,7 +287,7 @@
                         <td>{{item.STATUSNAME}}</td>
                         <td>{{item.LOANTYPE}}</td>
                         <td>{{item.LOANCASENUMBER}}</td>
-                        <td><span class="cursor-pointer" (click)="getDocument('1',item.DOCID)">View</span></td>
+                        <td><span class="cursor-pointer" (click)="getDocument('1',item.IMAGEID)">View</span></td>
                       </tr>
                     </tbody>
                   </table>
