appraisal and securities fixes

--- a/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
+++ b/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
@@ -239,7 +239,7 @@
                                 <tbody>
                                 <tr *ngFor="let production of productionArray; let i = index;">
                                     <td>
-                                        {{production.typeName}}
+                                        {{appraisalType(production.AppraisalType)}}
                                     </td>
                                     <td>
                                         {{production.cropName}}
