--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -75,7 +75,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr *ngFor="let customer of loan_data.reverse(); let i = index;">
+                            <tr *ngFor="let customer of loan_data; let i = index;">
                                 <td>
                                     {{customer.Cnic}}
                                 </td>
