--- a/src/app/modules/loan/create-loan/create-loan.component.html
+++ b/src/app/modules/loan/create-loan/create-loan.component.html
@@ -24,7 +24,7 @@
                                          (loanCustomerCall)="fillLoanApplicationObject($event)"></kt-cl-customers>
                     </mat-tab>
 
-                    <mat-tab label="Purpose" [disabled]="disabled_tab">
+                    <mat-tab label="Purpose" [disabled]="check_localstroage()">
                         <ng-template mat-tab-label>
                             <span (click)="checkError(disabled_tab)">Purpose</span>
                         </ng-template>
