--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -86,7 +86,7 @@
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Market Price <strong class="matMandatory">*</strong></mat-label>
-            <input matInput placeholder="Enter Market Price" formControlName="TotalEstimatedCost" appNumberOnly />
+            <input matInput placeholder="Enter Market Price" maxlength="9" formControlName="TotalEstimatedCost" appNumberOnly />
             <mat-error *ngIf="hasError('TotalEstimatedCost', 'required')">Market Price <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
@@ -97,13 +97,13 @@
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Equity (Rs.) <strong class="matMandatory"></strong></mat-label>
-            <input matInput placeholder="Enter Market Price" formControlName="AmountInHand" appNumberOnly />
+            <input matInput placeholder="Enter Market Price" maxlength="9" formControlName="AmountInHand" appNumberOnly />
           </mat-form-field>
         </div>
         <div class="col-lg-4 col-sm-12">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Loan Applied (Rs.) <strong class="matMandatory">*</strong></mat-label>
-            <input matInput placeholder="Enter Market Price" formControlName="AmountRequired" appNumberOnly />
+            <input matInput placeholder="Enter Market Price" maxlength="9" formControlName="AmountRequired" appNumberOnly />
             <mat-error *ngIf="hasError('AmountRequired', 'required')">Loan Applied <strong>required</strong></mat-error>
           </mat-form-field>
         </div>
