--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -9,11 +9,11 @@
         dark:bg-transparent
     "
 >
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">{{ getTitle() }}</div>
         </div>
-        <div class="col-lg-3 col-sm-12 self-center mt-2">
+        <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                         color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
@@ -26,7 +26,8 @@
         </div>
     </div>
     <div>
-
+        <div class="collapse show" id="collapseExample">
+            <div class="card card-body">
 
         <form
             [formGroup]="RecoveryForm"
@@ -283,7 +284,7 @@
                     </div>
                     </div>
 
-                    <div
+                    <!-- <div
                         class="flex flex-shrink-0 items-center mt-6 sm:mt-0"
                         style="width: 225px"
                     >
@@ -300,7 +301,7 @@
                             <mat-icon class="mr-2">search</mat-icon>
                             Search
                         </button>
-                    </div>
+                    </div> -->
                 </div>
                 </div>
                     <div
@@ -529,5 +530,7 @@
                     </div>
 
         </form>
+        </div>
+        </div>
     </div>
 </div>
