--- a/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
+++ b/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
@@ -24,14 +24,14 @@
 
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
-            <div class="flex" style="flex-wrap: wrap;" [formGroup]="viewForm">
+            <div class="flex mt-1" style="flex-wrap: wrap;" [formGroup]="viewForm">
                 <app-zone-branch-circle [form]="viewForm" [should_show_circle]="true"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                 <div class="mx-2">
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" color="primary">
                             <mat-label class="customMatLabel">PP No.</mat-label>
                             <input matInput placeholder="PP No." formControlName="PPNo" maxlength="30"
                                    autocomplete="off"/>
