--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]='PostDocument' (ngSubmit)="PostDocuments(PostDocument)">
 
     <div
-        class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+        class=" px-10  sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
-        <div class="row pt-3">
-            <div class="col-lg-9 col-sm-12">
+        <div class="row">
+            <div class="col-lg-12 col-sm-12">
                 <div class="heading">Document Information</div>
             </div>
 
