--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -85,7 +85,7 @@
                         <input matInput appNumberOnly formControlName="NetValue" />
                       </mat-form-field>
                     </td>
-                    <td> <span (click)="onSavePersonalSuretiesForm()">Save</span> | <span>Cancle</span></td>
+                    <td> <span (click)="onSavePersonalSuretiesForm()">Save</span> | <span>Cancel</span></td>
                   </tr>
                 </tbody>
               </table>
@@ -182,7 +182,7 @@
                         <input matInput formControlName="RefrenceNo" />
                       </mat-form-field>
                     </td>
-                    <td> <span (click)="onSaveCorporateSuretiesForm()">Save</span> | <span>Cancle</span></td>
+                    <td> <span (click)="onSaveCorporateSuretiesForm()">Save</span> | <span>Cancel</span></td>
                   </tr>
                 </tbody>
               </table>
@@ -285,7 +285,7 @@
                         <input matInput formControlName="Ntn" />
                       </mat-form-field>
                     </td>
-                    <td> <span (click)="onSaveLoanRefrencesForm()">Save</span> | <span>Cancle</span></td>
+                    <td> <span (click)="onSaveLoanRefrencesForm()">Save</span> | <span>Cancel</span></td>
                   </tr>
                 </tbody>
               </table>
@@ -373,7 +373,7 @@
                         <input matInput formControlName="WitnessAddress" />
                       </mat-form-field>
                     </td>
-                    <td> <span (click)="onSaveLoanWitnessForm()">Save</span> | <span>Cancle</span></td>
+                    <td> <span (click)="onSaveLoanWitnessForm()">Save</span> | <span>Cancel</span></td>
                   </tr>
                 </tbody>
               </table>
@@ -462,7 +462,7 @@
                         <mat-datepicker #picker5></mat-datepicker>
                       </mat-form-field>
                     </td>
-                    <td> <span (click)="onSaveLoanPastPaidForm()">Save</span> | <span>Cancle</span></td>
+                    <td> <span (click)="onSaveLoanPastPaidForm()">Save</span> | <span>Cancel</span></td>
                   </tr>
                 </tbody>
               </table>
@@ -566,7 +566,7 @@
                         <input matInput formControlName="DueDate" />
                       </mat-form-field>
                     </td>
-                    <td> <span (click)="onSaveCurrentLoansForm()">Save</span> | <span>Cancle</span></td>
+                    <td> <span (click)="onSaveCurrentLoansForm()">Save</span> | <span>Cancel</span></td>
                   </tr>
                 </tbody>
               </table>
