--- a/src/app/modules/loan/cl-pending-loan/cl-pending-loan.component.html
+++ b/src/app/modules/loan/cl-pending-loan/cl-pending-loan.component.html
@@ -19,7 +19,7 @@
 
 <div class="collapse show" id="collapseExample">
   <div class="card card-body" [formGroup]="loanSearch">
-    <div class="flex" style="flex-wrap: wrap;" >
+    <div class="flex mt-1" style="flex-wrap: wrap;" >
         <app-zone-branch-circle [form]="loanSearch" [should_show_circle]="false"
                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
         <div class="mx-2">
