--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -3,7 +3,7 @@
     <div
         class=" px-10  sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
-        <div class="row">
+        <div class="row pt-3">
             <div class="col-lg-12 col-sm-12">
                 <div class="heading">Document Information</div>
             </div>
