--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="col-lg-3 col-sm-12 self-center">
                 <p class="text-right">
-                    <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                    <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
                     color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                     aria-expanded="false" aria-controls="collapseExample">
                         <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
@@ -22,12 +22,9 @@
         </div>
 
         <!-- Header -->
-
-
-
           <div class="collapse show" id="collapseExample">
             <div class="card card-body">
-                <div class="flex" style="flex-wrap: wrap;">
+                <div class="flex mt-1" style="flex-wrap: wrap;">
                     <app-zone-branch-circle [form]="customerForm" [should_show_circle]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                         <div class="mx-2">
@@ -38,7 +35,7 @@
                                        formControlName="Cnic" maxlength="13" autocomplete="off"/>
 
                             </mat-form-field>
-                    </div>
+                        </div>
                     </div>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
