--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -182,7 +182,7 @@
                         <input matInput formControlName="RefrenceNo" />
                       </mat-form-field>
                     </td>
-                    <td> <span (click)="onSaveCorporateSuretiesForm()">Save</span> | <span>Cancle</span></td>
+                    <td> <span (click)="onSaveCorporateSuretiesForm()">Save</span> | <span  (click)="onCancel()">Cancle</span></td>
                   </tr>
                 </tbody>
               </table>
