reports add+changes

--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -109,8 +109,31 @@
     </div>
 
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
-        <!--        <div class="col-lg-4 col-sm-12">-->
-        <!--            <mat-card (click) = "dueInstallments()" class="cursor-pointer mx-4" id="llcInquiryText" ><p  class="font-bold text-lg">Due Installments</p></mat-card>-->
-        <!--        </div>-->
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="voucherPostingDay()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+            >Voucher Posting Day-Booking Report</p></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="dailyVoucherProof()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+            >Daily Vouchers Proof List</p></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="affidavitForLegalHeirs()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+            >Affidavit For Legal Heirs</p></mat-card>
+        </div>
+
     </div>
+
+    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="paymentBehavior()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText"><p
+            >Payment Behavior</p></mat-card>
+        </div>
+
+    </div>
+
 </div>
