--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -27,7 +27,7 @@
             <!-- Header -->
             <div [formGroup]="borrowerForm">
 
-                <div class="flex" style="flex-wrap: wrap;">
+                <div class="flex mt-1" style="flex-wrap: wrap;">
                     <app-zone-branch-circle [form]="borrowerForm" [should_show_circle]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
