--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -127,7 +127,7 @@
                     <td>{{legal.PhoneCell}}</td>
                     <td>{{legal.Dob}}</td>
                     <td>{{legal.Relation}}</td>
-                    <td><button class="btn btn-xs btn-primary" (click)="onDeleteLegalHeirs(legal.UserID,i)">Delete</button></td>
+                    <td><button type="button" class="btn btn-xs btn-primary" (click)="onDeleteLegalHeirs(legal.UserID,i)">Delete</button></td>
                   </tr>
                 </tbody>
               </table>
