--- a/src/app/modules/loan/cl-securities/cl-securities.component.html
+++ b/src/app/modules/loan/cl-securities/cl-securities.component.html
@@ -92,7 +92,7 @@
                     <td>{{loan.UnitPrice}}</td>
                     <td>{{loan.PludgedValue}}</td>
                     <td>{{loan.MaxCreditLimit}}</td>
-                    <td><button class="btn btn-xs btn-primary" (click)="showUpdateSecuritiesForm(loan)">Edit</button></td>
+                    <td><button type="button" class="btn btn-xs btn-primary" (click)="showUpdateSecuritiesForm(loan)">Edit</button></td>
                   </tr>
                 </tbody>
               </table>
