--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -69,7 +69,7 @@
           <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Tel(Res)NO</mat-label>
-              <input matInput formControlName="PhoneOff" appNumberOnly>
+              <input maxlength="7" matInput formControlName="PhoneOff" appNumberOnly>
             </mat-form-field>
           </div>
 
