--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -568,7 +568,7 @@
                                     <td>
                                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
                                             <input readonly="readonly" matInput [matDatepicker]="picker6"
-                                                   formControlName="DateDebitAcheive">
+                                                   formControlName="DateDebitAcheive" [max]="today">
                                             <mat-datepicker-toggle matSuffix [for]="picker6"></mat-datepicker-toggle>
                                             <mat-datepicker #picker6></mat-datepicker>
                                         </mat-form-field>
