--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -20,10 +20,10 @@
             <div class="col-lg-12 col-md-12  mat-elevation-z8">
 
                 <!--            <label>Search</label>-->
-                <input matInput class="" type="text" (keydown.enter)="$event.preventDefault()"
-                       placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off"
-                       spellcheck="off" type="text"
-                       #search>
+<!--                <input matInput class="" type="text" (keydown.enter)="$event.preventDefault()"-->
+<!--                       placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off"-->
+<!--                       spellcheck="off" type="text"-->
+<!--                       #search>-->
                                <agm-map #gm [zoom]="zoom" [latitude]="lat" [longitude]="lng" [restriction]="countryRestriction"
                          [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true" (mapReady)="onMapReady($event)"
                          class="h-screen">
